--- a/LojourProperties.Web/Areas/Admin/Pages/V1/AgentsPage/Index.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/AgentsPage/Index.cshtml
@@ -94,7 +94,7 @@
                          <td>
                              @foreach (var region in item.UserRegions)
                              {
-                                 <a class="btn btn-primary">@region.OperatingRegion.Location</a>
+                                 @*<a class="btn btn-primary">@region.OperatingRegion.Location</a>*@
                              }
                          </td>
                         
