--- a/LojourProperties.Web/Pages/Shared/Components/HomeSearch/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/HomeSearch/Default.cshtml
@@ -1,64 +1,6 @@
 ﻿
 
-
-<div class="search-bar">
-    <div class="section-search search-style-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                    <div class="clearfix">
-                        <form>
-                            <div class="search-form pull-left">
-                                <div class="search-form-inner pull-left">
-                                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding">
-                                        <div class="form-group">
-                                            <label>Property</label>
-                                            <input type="text" class="form-control" placeholder="Eg Duplex , One Room , Bungalo." />
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding">
-                                        <div class="form-group">
-                                            <label>Select Location</label>
-                                            <select class=" form-control make" asp-items="ViewBag.OperatingRegionId">
-                                                <option label="Any Location"></option>
-
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding">
-                                        <div class="form-group">
-                                            <label>Select Amount</label>
-                                            <select class=" form-control search-year">
-                                                <option label="Any Amount"></option>
-
-                                                <option>50,000 - 200,000</option>
-                                                <option>200,000 - 400,000</option>
-                                                <option>400,000 - 800,000</option>
-                                                <option>800,000 - 1,000,000</option>
-                                                <option>1,000,000 - 5,000,000</option>
-                                                <option>5,000,000 - 20,000,000</option>
-                                                <option>20,000,000 - 50,000,000</option>
-                                                <option>50,000,000 - 500,000,000</option>
-                                                <option>500,000,000 - 5,000,000,000</option>
-
-
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding">
-                                        <div class="form-group" style="margin:5px 0 0 0;">
-                                            <label></label>
-                                            <button type="submit" value="submit" class="btn btn-lg btn-theme" style="width:100%;margin-top:0;">Search Now</button>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--================================../SEARCH STYLE 2================================-->
-</div>
+<style>
+   
+</style>
+ 
