--- a/LojourProperties.Web/Areas/Main/Pages/Accounts/Index.cshtml
+++ b/LojourProperties.Web/Areas/Main/Pages/Accounts/Index.cshtml
@@ -71,7 +71,7 @@
                             <td>
                                 @foreach (var region in item.UserRegions)
                                 {
-                                    <a class="btn btn-primary">@region.OperatingRegion.Location</a>
+                                    @*<a class="btn btn-primary">@region.OperatingRegion.Location</a>*@
                                 }
 
                             </td>
